-Fixed the login icon error

--- a/frontEnd/public/css/app.css
+++ b/frontEnd/public/css/app.css
@@ -18,7 +18,7 @@
 
     .bi-box-arrow-in-right {
         font-size: 20px;
-        visibility: visible !important;
+        display: revert !important;
     }
 
     .logInIcon, .registerIcon {
@@ -35,5 +35,5 @@
 }
 
 .bi-box-arrow-in-right {
-    visibility: hidden;
+    display: none;
 }
