-Places can be created normally.

--- a/frontEnd/public/css/app.css
+++ b/frontEnd/public/css/app.css
@@ -18,7 +18,7 @@
 
     .bi-box-arrow-in-right {
         font-size: 20px;
-        display: revert !important;
+        display: revert !important
     }
 
     .logInIcon, .registerIcon {
