--- a/frontEnd/public/css/menu.css
+++ b/frontEnd/public/css/menu.css
@@ -1,3 +1,12 @@
+.linkMenuDiv a:hover {
+    background-color: black !important;
+    color: white !important;
+    text-shadow: black 1px 0 10px;
+    transform: scale(1.1);
+}
+.linkMenuDiv a {
+    transition: transform .2s;
+}
 .commemorativeImage {
     height: 7rem;
     background-image: url('../assets/coins/france_2022.png');
